# TeraFly

./: OPT-1.3b.json  README.md  codegen.py  weight_packer.py
LLM-demo-gui/alveo/: client-v3.py  xrt_py_new.py
LLM-demo-gui/alveo/tokenizer-1.3b/: tokenizer_config.json
LLM-demo-gui/llm-gui/: README.md  message-format.md
LLM-demo-gui/llm-gui/server/python/: client-v2.py  client-v3.py  client.py  xrt_py.py
LLM-demo-gui/llm-gui/web/: index.html
LLM-demo-gui/llm-gui/web/cdn/: roboto-font.css
LLM-demo-gui/llm-gui/web/script/: app.js
OPT-1.3b_optimize/: CMakeLists.txt  Makefile  command.sh  connectivity.cfg  data.h  device_trace_0.csv  host.cpp  loopLynx  loopLynx.cpp  loopLynx.h  makefile_us_alveo.mk  params.h  summary.csv  utils.h  xrt.ini  xrt.run_summary
OPT-1.3b_optimize/build_dir.hw.xilinx_u50lv_gen3x4_xdma_2_202010_1/: loopLynx.link.xclbin.info  loopLynx.link.xclbin.link_summary  loopLynx.xclbin.package_summary
OPT-1.3b_optimize/tokenizer/: command.sh  conver_vocab.py  loopLynx.h  output.txt  tokenizer  tokenizer_predict.cpp  tokenizer_predict_eigen.cpp  tokenizer_predict_generate.cpp  tokenizer_predict_original.cpp  utils.h
template/: Makefile  adder_tree_32.cpp  adder_tree_64.cpp  attention.cpp  connectivity.cfg  gemm_quant.cpp  kernels.cpp  layerNorm.cpp  makefile_us_alveo.mk  router.cpp  top.cpp  top.h
